kubernetes/prod/kafka.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
spec:
  serviceName: kafka
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka-cntr
          image: bitnami/kafka:3.3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9092
          resources:
            limits:
              memory: "600Mi"
              cpu: "1"
            requests:
              memory: "350Mi"
              cpu: "600m"
          livenessProbe:
            exec:
              command: ["sh", "-c", "/opt/bitnami/kafka/bin/kafka-topics.sh --list --bootstrap-server localhost:9092"]
            initialDelaySeconds: 2
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          volumeMounts:
            - name: kafka-data
              mountPath: /bitnami/kafka
  volumeClaimTemplates:
    - metadata:
        name: kafka-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 500Mi
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
spec:
  clusterIP: None    # Headless service for StatefulSet
  selector:
    app: kafka
  ports:
    - port: 9092
      targetPort: 9092
