kubernetes/prod/mongo.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
spec:
  selector:
    matchLabels:
      app: mongo
  serviceName: "mongo"
  replicas: 1  # For a replica set, increase this and configure accordingly
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo-cntr
          image: mongo:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
              name: mongo
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
          resources:
            limits:
              memory: "200Mi"
              cpu: "128m"
            requests:
              memory: "128Mi"
              cpu: "32m" 
          readinessProbe:
            exec:
              command:
                - bash
                - -c
                - </dev/tcp/localhost/27017 || exit 1
            initialDelaySeconds: 1
            periodSeconds: 10
            timeoutSeconds: 10
            failureThreshold: 3
  volumeClaimTemplates:
    - metadata:
        name: mongo-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 500Mi


---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels:
    app: mongo
spec:
  ports:
    - port: 27017
      name: mongo
  clusterIP: None  # Headless service
  selector:
    app: mongo
