kubernetes/prod/spark-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spark-worker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spark-worker
  template:
    metadata:
      labels:
        app: spark-worker
    spec:
      containers:
      - name: spark-worker-cntr
        image: ${CI_REGISTRY_IMAGE}/flight-dash-spark:${IMAGE_VERSION}
        imagePullPolicy: IfNotPresent
        command:
          - /opt/bitnami/spark/bin/spark-class
          - org.apache.spark.deploy.worker.Worker
          - spark://spark-master-svc:7077
        ports:
        - containerPort: 8081
        resources:
          requests:
            cpu: "1"
            memory: "1Gi"
          limits:
            cpu: "1"
            memory: "1Gi"
        readinessProbe:
          httpGet:
            path: /
            port: 8081
          initialDelaySeconds: 1
          periodSeconds: 5
          timeoutSeconds: 5
          failureThreshold: 3

        livenessProbe:
          httpGet:
            path: /
            port: 8081
          initialDelaySeconds: 1      # Wait 1s after container start before first probe
          periodSeconds: 5             # Check every 5 seconds
          timeoutSeconds: 5            # Each probe waits up to 5 seconds for a response
          failureThreshold: 3          # If 3 consecutive failures, pod is restarted
---
apiVersion: v1
kind: Service
metadata:
  name: spark-worker-svc
  labels:
    app: spark-worker
spec:
  selector:
    app: spark-worker
  ports:
  - port: 8081
    targetPort: 8081
